--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ members = ["models", "feed-fetcher", "database"]
 models = { path = "models"}
 feed-fetcher = { path = "feed-fetcher"}
 database ={ path = "database"}
+axum = "0.8.7"
+tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
