--- a/feed-fetcher/Cargo.toml
+++ b/feed-fetcher/Cargo.toml
@@ -4,3 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+models = { path = "../models" }
+axum = "0.8.7"
+uuid = { version = "1.19.0", features = ["v4", "serde"] }
