--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ feed-fetcher = { path = "feed-fetcher"}
 database ={ path = "database"}
 axum = "0.8.7"
 tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
+dotenvy = "0.15.7"
 
 [dev-dependencies]
 rstest = "0.26.1"
