--- a/models/Cargo.toml
+++ b/models/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2024"
 serde = { version = "1.0.228", features = ["derive"] }
 uuid = { version = "1.19.0", features = ["v4", "serde"] }
 chrono = { version = "0.4.42", features = ["serde"]}
+sqlx = { version = "0.8.6", features = ["derive", "uuid"] }
