--- a/feed-fetcher/Cargo.toml
+++ b/feed-fetcher/Cargo.toml
@@ -5,5 +5,10 @@ edition = "2024"
 
 [dependencies]
 models = { path = "../models" }
-axum = "0.8.7"
+axum = { version = "0.8.7", features = ["macros"] }
 uuid = { version = "1.19.0", features = ["v4", "serde"] }
+reqwest = "0.12.28"
+rss = "2.0.12"
+chrono = { version = "0.4.42", features = ["serde"] }
+tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
+sqlx = { version = "0.8.6", features = ["macros", "derive", "postgres", "runtime-tokio", "uuid", "chrono"] }
